Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -66,6 +66,16 @@ url={https://doi.org/10.1007/BF00702605}
     url={https://www.researchgate.net/publication/353047693_Demonstration_Of_Rabi-Flops_With_Ytterbium_171_Trapped-Ion_Qubits}
 }
 
+@article{DiodeLaserInducedFluorescenceForGas-PhaseDiagnostics,
+    author = {Burns, Iain and Kaminski, Clemens},
+    year = {2011},
+    month = {12},
+    pages = {1343-1366},
+    title = {Diode Laser Induced Fluorescence for Gas-Phase Diagnostics},
+    volume = {225},
+    journal = {Zeitschrift für Physikalische Chemie},
+    doi = {10.1524/zpch.2011.0182}
+}
 
 @book{fundamentalsOfPhotonics,
   title     = "Fundamentals of Photonics",
